samples/_failures_safe/1761663759_dc4148_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b7d60dcc.c: In function ‘main’:
./samples/SAFE/__tmp_b7d60dcc.c:159:9: error: ‘trans’ undeclared (first use in this function)
  159 |     if (trans
      |         ^~~~~
./samples/SAFE/__tmp_b7d60dcc.c:159:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_b7d60dcc.c:159:14: error: expected ‘)’ at end of input
  159 |     if (trans
      |        ~     ^
      |              )
./samples/SAFE/__tmp_b7d60dcc.c:159:5: error: expected declaration or statement at end of input
  159 |     if (trans
      |     ^~
